--- a/app/assets/stylesheets/_recipe_ingredients_panel.scss
+++ b/app/assets/stylesheets/_recipe_ingredients_panel.scss
@@ -1,15 +1,17 @@
 $ingredients__panel_base_width: 400px;
 
 .recipe__ingredients_panel {
-    overflow-y: scroll;
+    overflow-y: auto;
+    transform: translateX(0px);
+    transition:
+        transform 3s ease-in-out,
+        max-height 0.5s ease-in-out;
     @media (min-width: 768px) and (orientation: landscape) {
         width: $ingredients__panel_base_width;
         height: 100vh;
         position: fixed;
         right: 0;
         top: 0;
-        transform: translateX(0px);
-        transition: transform 3s ease-in-out; // add transition for smooth animation
     }
 
     @media (max-width: 767px), (min-width: 768px) and (orientation: portrait) {
